--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
 
 script:
   - docker-compose exec --env 'RAILS_ENV=test' web rails db:create
-  - docker-compose exec --env 'RAILS_ENV=test' web db:migrate
+  - docker-compose exec --env 'RAILS_ENV=test' web rails db:migrate
   - docker-compose exec --env 'RAILS_ENV=test' web rails test
